--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
                         <a  class="btn" href="#">Comprar</a>
         </div>
     </section>
+    <script src="index.js"></script>
 </body>
 </html>
