--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <p>Lorem ipsum dolor sit amet consectetur </p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et </p>
                         <br>
-                        <a  class="btn" href="#">Comprar</a>
+                        <a  class="btn" href="#">Buy Now</a>
         </div>
     </section>
     <script src="index.js"></script>
