--- a/index.html
+++ b/index.html
@@ -9,9 +9,17 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li> <a href="">Home</a></li>
+            <li><a href="">Choice</a></li>
+            <li> <a href="">About Us</a></li>
+            <li><a href="">Contact</a></li>
+        </ul>  
+    </header>
     <section class="container flex text-center">
         <div class="columna">
-            <h2>Plan Uno</h2>
+            <h2>Table One</h2>
             <p class="precio">$500</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta molestiae enim, beatae non nam, minus porro</p>
             <hr>
@@ -19,10 +27,10 @@
             <p>Lorem ipsum dolor sit amet consectetur </p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et </p>
             <br>
-            <a  class="btn" href="#">Comprar</a>
+            <a  class="btn" href="#">Buy Now</a>
         </div>
         <div class="columna">
-                <h2>Plan Two</h2>
+                <h2>Table Two</h2>
                 <p class="precio">$500</p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta molestiae enim, beatae non nam, minus porro</p>
                 <hr>
@@ -30,10 +38,10 @@
                 <p>Lorem ipsum dolor sit amet consectetur </p>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et </p>
                 <br>
-                <a  class="btn" href="#">Comprar</a>
+                <a  class="btn" href="#">Buy Now</a>
         </div>
         <div class="columna">
-                    <h2>Plan Three</h2>
+                    <h2>Table Three</h2>
                     <p class="precio">$500</p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta molestiae enim, beatae non nam, minus porro</p>
                     <hr>
@@ -41,10 +49,10 @@
                     <p>Lorem ipsum dolor sit amet consectetur </p>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et </p>
                     <br>
-                    <a  class="btn" href="#">Comprar</a>
+                    <a  class="btn" href="#">Buy Now</a>
         </div>
         <div class="columna">
-                        <h2>Plan Four</h2>
+                        <h2>Table Four</h2>
                         <p class="precio">$500</p>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta molestiae enim, beatae non nam, minus porro</p>
                         <hr>
