--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="index.css">
-    <title>Document</title>
+    <title>Portafolio</title>
 </head>
 <body>
     <header>
@@ -21,7 +21,8 @@
         <div class="columna">
             <h2>Robots-FRIENDS</h2>
             <p> THIS  APP LOCATES YOUR FRIEND IN THE DATABASE ></p>
-            <img src="./robots.PNG" alt="">
+             <h4>Skills <img style="width: 200px;" src="./img/logo192.png" alt="">React</h4>
+            <img src="./img/robots.PNG" alt="">
             <a  class="btn" href="https://github.com/barbaroreyes/newT2">Github</a>
             <hr>
             <a  class="btn" href="https://robotsapp.netlify.app/">WebSite</a>
@@ -29,7 +30,8 @@
         <div class="columna">
                 <h2>E-Comerce</h2>
                 <p>A GREAT SHOP === LOW PRICES & FREE SHIPPING</p>
-                <img src="./ecomerce.PNG" alt="">
+                <h4>Skills <img style="width: 200px;" src="./img/logo192.png" alt="">React</h4>
+                <img src="./img/ecomerce.PNG" alt="">
                 <a  class="btn" href="https://github.com/barbaroreyes/EcomerceCLone">Github</a>
                 <hr>
                 <a  class="btn" href="https://hungry-einstein-27344a.netlify.app/">WebSite</a>
@@ -38,6 +40,7 @@
                     <h2>Table Three</h2>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                          Et soluta molestiae enim</p>
+                         <h4>Skills Html||Css||javaScript||Reat||Node>js </h4>
                          <img src=https://images.unsplash.com/photo-1572177812156-58036aae439c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvamVjdHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"" alt="">
                          <a  class="btn" href="#">Github</a>
                     <hr>
@@ -50,6 +53,7 @@
                         
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
                              molestiae enim</p>
+                             <h4>Skills Html||Css||javaScript||Reat||Node>js </h4>
                              <img src=https://images.unsplash.com/photo-1572177812156-58036aae439c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvamVjdHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"" alt="">   
                              <a  class="btn" href="#">Github</a>
                              <hr>
