--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
     </header>
     <section class="container flex text-center">
         <div class="columna">
-            <h2>Robots-FRIENDS</h2>
-            <p> THIS  APP LOCATES YOUR FRIEND IN THE DATABASE ></p>
+            <h2>Robots-Friends</h2>
+            <p> THIS  APP LOCATES YOUR FRIEND IN THE DATABASE </p>
              <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
             <img src="./img/robots.PNG" alt="">
             <a  class="btn" href="https://github.com/barbaroreyes/newT2">Github</a>
@@ -28,8 +28,8 @@
             <a  class="btn" href="https://robotsapp.netlify.app/">WebSite</a>
         </div>
         <div class="columna">
-                <h2>E-Comerce</h2>
-                <p>A GREAT SHOP === LOW PRICES & FREE SHIPPING</p>
+                <h2>E  -Comerce Store</h2>
+                <p>A GREAT LUXURY SHOP === LOW PRICES & FREE SHIPPING</p>
                 <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
                 <img src="./img/ecomerce.PNG" alt="">
                 <a  class="btn" href="https://github.com/barbaroreyes/EcomerceCLone">Github</a>
