--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <h2>Table Three</h2>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                          Et soluta molestiae enim</p>
-                         <h4>Skills Html||Css||javaScript||Reat||Node>js </h4>
+                         <p>Skills Html||Css||javaScript||Reat||Node>js </p>
                          <img src=https://images.unsplash.com/photo-1572177812156-58036aae439c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvamVjdHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"" alt="">
                          <a  class="btn" href="#">Github</a>
                     <hr>
@@ -49,15 +49,14 @@
                     
         </div>
         <div class="columna">
-                        <h2>Table Four</h2>
-                        
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
-                             molestiae enim</p>
-                             <h4>Skills Html||Css||javaScript||Reat||Node>js </h4>
-                             <img src=https://images.unsplash.com/photo-1572177812156-58036aae439c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvamVjdHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"" alt="">   
-                             <a  class="btn" href="#">Github</a>
-                             <hr>
-                             <a  class="btn" href="#">WebSite</a>
+                <h2>Table Four</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
+                     molestiae enim</p>
+                  <p>Skills Html||Css||javaScript||Reat||Node>js </p>
+                  <img src=https://images.unsplash.com/photo-1572177812156-58036aae439c?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MXx8cHJvamVjdHN8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60"" alt="">   
+                  <a  class="btn" href="#">Github</a>
+                   <hr>
+                 <a  class="btn" href="#">WebSite</a>
         </div>
     </section>
     <script src="index.js"></script>
