--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="columna">
                 <h2>E  -Comerce Store</h2>
-                <p>A GREAT LUXURY SHOP === LOW PRICES & FREE SHIPPING</p>
+                <p>A GREAT LUXURY SHOP LOW PRICES & FREE SHIPPING</p>
                 <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
                 <img src="./img/ecomerce.PNG" alt="">
                 <a  class="btn" href="https://github.com/barbaroreyes/EcomerceCLone">Github</a>
