--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <ul>
-        <li><a href="https://github.com/barbaroreyes/portta-flex">Home</a></li>
+        <li><a href="https://barbaroreyes.github.io/portta-flex/">Home</a></li>
       <li><a href="https://barbaroreyes.github.io/First-Responsive-WebsiteBarbaro/">About</a></li>
       <li><a href="https://barbaroreyes.github.io/tablas/">Portfolio</a></li>
       <li><a href="https://barbaroreyes.github.io/NASA-Page/?fname=barbaro">Contact</a></li>
