added img to placeholder

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         </div>
         <div class="columna">
                     <h2>Table Three</h2>
+                    <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
                      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                          Et soluta molestiae enim</p>
                          <p>Skills Html||Css||javaScript||Reat||Node>js </p>
@@ -50,6 +51,7 @@
         </div>
         <div class="columna">
                 <h2>Table Four</h2>
+                <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
                      molestiae enim</p>
                   <p>Skills Html||Css||javaScript||Reat||Node>js </p>
