--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
                 <a  class="btn" href="https://hungry-einstein-27344a.netlify.app/">WebSite</a>
         </div>
         <div class="columna">
-                    <h2>Table Three</h2>
+                    <h2>Media_player-App</h2>
                     <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
-                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                         Et soluta molestiae enim</p>
-                         <p>Skills Html||Css||javaScript||Reat||Node>js </p>
+                     <p></p>
+                         <p>Skills React Graphql AWS-Amplify</p>
                          <img src="./img/Media_player.png" alt="">
                          <a  class="btn" href="https://github.com/barbaroreyes/app-m-player/tree/main">Github</a>
                     <hr>
@@ -50,16 +49,26 @@
                     
         </div>
         <div class="columna">
-                <h2>Table Four</h2>
+                <h2>Pet-Pictures-App</h2>
                 <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
-                     molestiae enim</p>
+                    <p></p>
                   <p>Skills Html||Css||javaScript||Reat||Node>js </p>
                   <img src="./img/do.png" alt="">   
                   <a class="btn" href="https://github.com/barbaroreyes/dogs-app-frontend/tree/main">Github</a>
                    <hr>
                    <a  class="btn" href="https://main.d20zwbvpcwy8fb.amplifyapp.com/">WebSite</a>
         </div>
+        <div class="columna">
+            <h2>Table Four</h2>
+            <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
+                 molestiae enim</p>
+              <p>Skills Html||Css||javaScript||Reat||Node>js </p>
+              <img src="./img/app-store-beers.png" alt="">   
+              <a class="btn" href="https://github.com/barbaroreyes/app-store-beers">Github</a>
+               <hr>
+               <a  class="btn" href="https://barbaro-store-beers.netlify.app/">WebSite</a>
+    </div>
     </section>
     <script src="index.js"></script>
 </body>
