--- a/index.html
+++ b/index.html
@@ -59,10 +59,9 @@
                    <a  class="btn" href="https://main.d20zwbvpcwy8fb.amplifyapp.com/">WebSite</a>
         </div>
         <div class="columna">
-            <h2>Table Four</h2>
+            <h2>App-Store-Beers</h2>
             <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta
-                 molestiae enim</p>
+                <p></p>
               <p>Skills Html||Css||javaScript||Reat||Node>js </p>
               <img src="./img/app-store-beers.png" alt="">   
               <a class="btn" href="https://github.com/barbaroreyes/app-store-beers">Github</a>
