added-new-home-link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <ul>
-        <li><a href="https://barbaro-ga.netlify.app/">Home</a></li>
+        <li><a href="https://main.d18mqs05g5rgsh.amplifyapp.com/">Home</a></li>
       <li><a href="https://barbaroreyes.github.io/First-Responsive-WebsiteBarbaro/">About</a></li>
       <li><a href="https://barbaroreyes.github.io/tablas/">Portfolio</a></li>
       <li><a href="https://barbaroreyes.github.io/NASA-Page/?fname=barbaro">Contact</a></li>
