added-new=project

--- a/index.html
+++ b/index.html
@@ -57,6 +57,16 @@
                <hr>
                <a  class="btn" href="https://barbaro-store-beers.netlify.app/">WebSite</a>
     </div>
+    <div class="columna">
+        <h2>Food-App</h2>
+        <h4>Skills <img style="width: 100px;" src="./img/logo192.png" alt="">React</h4>
+            <p>React-AWS</p>
+          <p>Skills javaScript||Reat||Node>js||AWS </p>
+          <img src="https://foochinfc1cd0cfacea4ccea0ccc60fa3e20f1515410-dev.s3.amazonaws.com/public/images/Elchinchorro.png" alt="">   
+          <a class="btn" href="https://github.com/barbaroreyes/app-store-beers">Github</a>
+           <hr>
+           <a  class="btn" href="https://main.d3alt2lovgrik3.amplifyapp.com">WebSite</a>
+</div>
     </section>
     <script src="index.js"></script>
 </body>
